--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 THIS FILE HAS SOURCE DATA, THE NOTEBOOK AND THE CSV FILE OF THE PROJECT.
+
+PLEASE SEE THE COPY VERSION AS IT HAS GOOGLE DRIVE CONNECTED.
